tests/invalid/invalid_main.m
:- module invalid_main.
:- import_module io.
:- interface.
:- pred main(int::di, int::out) is multi.
:- implementation.
main --> [].
